<resources>
    <string name="app_name">MAD Project</string>
    <string name="getwheels">GetWheels</string>
    <string name="gsi" />
    <string name="mini_txt">Need a Car?\nRent Online Now!</string>
    <string name="get_started">Get Started</string>
    <string name="hintus">email address or phone number</string>
    <string name="hintps">password</string>
    <string name="password">Password *</string>
    <string name="username">Username *</string>
    <string name="login">Login</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="btnlogin">Login</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create new account</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? <u><b>Sign up</b></u></string>
    <string name="hintpn">phone number</string>
    <string name="mobile">Mobile *</string>
    <string name="btnsign_up">Sign up</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="hintdob">day/month/year</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="usernameup">Username :</string>
    <string name="userpic">TODO</string>
    <string name="date_of_birthup">Date of Birth :</string>
    <string name="mobileup">Mobile :</string>
    <string name="address">Address</string>
    <string name="hintadd">street, city</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="loginlink">Login</string>
    <string name="lbladdress">Address :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="show_profile_details">Show\nDetails</string>
    <string name="update_profile">Update\nProfile</string>
    <string name="delete_profile">Delete\nProfile</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="topdesign">TODO</string>
    <string name="details">Details</string>
    <string name="honda_brv">Honda\nBrv</string>
    <string name="btndetails">Details</string>
    <string name="our_cars">Our Cars</string>
    <string name="bmw_3_series_330i">BMW\n3 Series 330i</string>
    <string name="bmw">TODO</string>
    <string name="brv">TODO</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="drop_off_date_time"><![CDATA[Drop-off Date & Time]]></string>
    <string name="pick_up_date_time"><![CDATA[Pick-up Date & Time]]></string>
    <string name="btncontinue">Continue</string>
    <string name="find_your_ride">Find your ride</string>
    <string name="hintchoose"><![CDATA[Enter date & time]]></string>
    <string name="hintloc">Enter location</string>
    <string name="book_now">Book Now</string>
    <string name="rs_5000_day">Rs.5000/Day</string>
    <string name="rs_7500_day">Rs.7500/Day</string>
    <string name="automatic">Automatic</string>
    <string name="air_conditioned">Air Conditioned</string>
    <string name="_7_seater">7 Seater</string>
    <string name="petrol">Petrol</string>
    <string name="car_details">Car Details</string>
</resources>